--- a/product-page.html
+++ b/product-page.html
@@ -283,7 +283,7 @@
                                 </p>
                             </div>
 
-                            <!-- 03.10 -->
+                            <!-- 10.10 -->
                             <div class="product__autoreorder">
                                 <p>Auto-reorder</p>
                                 <div class="prar__wrapper">
@@ -305,9 +305,83 @@
                                             Monthly
                                         </label>
                                     </div>
+                                    <div class="prar__box">
+                                        <input type="radio" name="autoreorder" id="ar4">
+                                        <label for="ar4">
+                                            No reorder
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="row prar-select">
+                                    <div class="col-lg-6 select-weekday">
+                                        <div class="productselect">
+                                            <p>Select Weekday</p>
+                                            <div class="generalselect">
+                                                <select class="customselect" name="category">
+                                                    <option value="0">Sunday</option>
+                                                    <option value="1">Monday</option>
+                                                    <option value="2">Tuesday</option>
+                                                    <option value="3">Wednesday</option>
+                                                    <option value="4">Thursday</option>
+                                                    <option value="5">Friday</option>
+                                                    <option value="6">Saturday</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 select-mounthly hide">
+                                        <div class="productselect">
+                                            <p>Select Monthly</p>
+                                            <div class="generalselect">
+                                                <select class="customselect" name="category">
+                                                    <option value="0">1</option>
+                                                    <option value="1">2</option>
+                                                    <option value="2">3</option>
+                                                    <option value="3">4</option>
+                                                    <option value="4">5</option>
+                                                    <option value="5">6</option>
+                                                    <option value="6">7</option>
+                                                    <option value="6">8</option>
+                                                    <option value="6">9</option>
+                                                    <option value="6">10</option>
+                                                    <option value="6">11</option>
+                                                    <option value="6">12</option>
+                                                    <option value="6">13</option>
+                                                    <option value="6">14</option>
+                                                    <option value="6">15</option>
+                                                    <option value="6">16</option>
+                                                    <option value="6">17</option>
+                                                    <option value="6">18</option>
+                                                    <option value="6">19</option>
+                                                    <option value="6">20</option>
+                                                    <option value="6">21</option>
+                                                    <option value="6">22</option>
+                                                    <option value="6">23</option>
+                                                    <option value="6">24</option>
+                                                    <option value="6">25</option>
+                                                    <option value="6">26</option>
+                                                    <option value="6">27</option>
+                                                    <option value="6">28</option>
+                                                    <option value="6">29</option>
+                                                    <option value="6">30</option>
+                                                    <option value="6">31</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 select-startdate">
+                                        <div class="productselect">
+                                            <p>Select Start Date</p>
+                                            <div class="startdatewrapper">
+                                                <label for="start-date"><img src="img/admin/calendat-icon.svg" alt="icon"></label>
+                                                <input class="startdate datepicker" type="text" id="">
+                                            </div>
+                                        </div>
+                                        
+                                    </div>
                                 </div>
                             </div>
-                            <!-- 03.10 -->
+                            <!-- 10.10 -->
 
                             <div class="productinfo__addproduct">
                                 <div class="productinfo__addwrap">
@@ -383,7 +457,7 @@
                                 </p>
 
 
-                                
+
                             </div>
                             <!-- 03.10 -->
                             <div class="productinfo__alergyfree">
@@ -1219,9 +1293,12 @@
     <script src="js/lib/swiper.js"></script>
     <script src="js/lib/zoomsl.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-
+   
+    <script src="https://code.jquery.com/ui/1.14.0/jquery-ui.js"></script>
 
     <script src="js/common.js"></script>
 </body>
 
 </html>
+
+
