--- a/cart-page.html
+++ b/cart-page.html
@@ -172,12 +172,11 @@
                                             <img src="img/header/delete-icon.svg" alt="remove">
                                         </button>
                                     </div>
-
                                     <div class="cart__autoorder">
                                         <p>Auto-reorder</p>
                                         <div class="cart__aowrap">
                                             <div class="cart__aobox">
-                                                <input type="radio" id="cao1" name="cartautoorder">
+                                                <input type="radio" id="cao1" name="cartautoorder" checked>
                                                 <label for="cao1">Every week</label>
                                             </div>
                                             <div class="cart__aobox">
@@ -187,6 +186,78 @@
                                             <div class="cart__aobox">
                                                 <input type="radio" id="cao3" name="cartautoorder">
                                                 <label for="cao3">Monthly</label>
+                                            </div>
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao4" name="cartautoorder">
+                                                <label for="cao4">No reorder</label>
+                                            </div>
+                                        </div>
+                                        <div class="row prar-select">
+                                            <div class="col-lg-6 select-weekday">
+                                                <div class="productselect">
+                                                    <p>Select Weekday</p>
+                                                    <div class="generalselect">
+                                                        <select class="customselect" name="category">
+                                                            <option value="0">Sunday</option>
+                                                            <option value="1">Monday</option>
+                                                            <option value="2">Tuesday</option>
+                                                            <option value="3">Wednesday</option>
+                                                            <option value="4">Thursday</option>
+                                                            <option value="5">Friday</option>
+                                                            <option value="6">Saturday</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6 select-mounthly hide">
+                                                <div class="productselect">
+                                                    <p>Select Monthly</p>
+                                                    <div class="generalselect">
+                                                        <select class="customselect" name="category">
+                                                            <option value="0">1</option>
+                                                            <option value="1">2</option>
+                                                            <option value="2">3</option>
+                                                            <option value="3">4</option>
+                                                            <option value="4">5</option>
+                                                            <option value="5">6</option>
+                                                            <option value="6">7</option>
+                                                            <option value="6">8</option>
+                                                            <option value="6">9</option>
+                                                            <option value="6">10</option>
+                                                            <option value="6">11</option>
+                                                            <option value="6">12</option>
+                                                            <option value="6">13</option>
+                                                            <option value="6">14</option>
+                                                            <option value="6">15</option>
+                                                            <option value="6">16</option>
+                                                            <option value="6">17</option>
+                                                            <option value="6">18</option>
+                                                            <option value="6">19</option>
+                                                            <option value="6">20</option>
+                                                            <option value="6">21</option>
+                                                            <option value="6">22</option>
+                                                            <option value="6">23</option>
+                                                            <option value="6">24</option>
+                                                            <option value="6">25</option>
+                                                            <option value="6">26</option>
+                                                            <option value="6">27</option>
+                                                            <option value="6">28</option>
+                                                            <option value="6">29</option>
+                                                            <option value="6">30</option>
+                                                            <option value="6">31</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6 select-startdate">
+                                                <div class="productselect">
+                                                    <p>Select Start Date</p>
+                                                    <div class="startdatewrapper">
+                                                        <label for="start-date"><img src="img/admin/calendat-icon.svg" alt="icon"></label>
+                                                        <input class="startdate datepicker" type="text" id="">
+                                                    </div>
+                                                </div>
+                                                
                                             </div>
                                         </div>
                                     </div>
@@ -224,12 +295,11 @@
                                             <img src="img/header/delete-icon.svg" alt="remove">
                                         </button>
                                     </div>
-
                                     <div class="cart__autoorder">
                                         <p>Auto-reorder</p>
                                         <div class="cart__aowrap">
                                             <div class="cart__aobox">
-                                                <input type="radio" id="cao11" name="cartautoorder2">
+                                                <input type="radio" id="cao11" name="cartautoorder2" checked>
                                                 <label for="cao11">Every week</label>
                                             </div>
                                             <div class="cart__aobox">
@@ -239,6 +309,78 @@
                                             <div class="cart__aobox">
                                                 <input type="radio" id="cao31" name="cartautoorder2">
                                                 <label for="cao31">Monthly</label>
+                                            </div>
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao41" name="cartautoorder2">
+                                                <label for="cao41">No reorder</label>
+                                            </div>
+                                        </div>
+                                        <div class="row prar-select">
+                                            <div class="col-lg-6 select-weekday">
+                                                <div class="productselect">
+                                                    <p>Select Weekday</p>
+                                                    <div class="generalselect">
+                                                        <select class="customselect" name="category">
+                                                            <option value="0">Sunday</option>
+                                                            <option value="1">Monday</option>
+                                                            <option value="2">Tuesday</option>
+                                                            <option value="3">Wednesday</option>
+                                                            <option value="4">Thursday</option>
+                                                            <option value="5">Friday</option>
+                                                            <option value="6">Saturday</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6 select-mounthly hide">
+                                                <div class="productselect">
+                                                    <p>Select Monthly</p>
+                                                    <div class="generalselect">
+                                                        <select class="customselect" name="category">
+                                                            <option value="0">1</option>
+                                                            <option value="1">2</option>
+                                                            <option value="2">3</option>
+                                                            <option value="3">4</option>
+                                                            <option value="4">5</option>
+                                                            <option value="5">6</option>
+                                                            <option value="6">7</option>
+                                                            <option value="6">8</option>
+                                                            <option value="6">9</option>
+                                                            <option value="6">10</option>
+                                                            <option value="6">11</option>
+                                                            <option value="6">12</option>
+                                                            <option value="6">13</option>
+                                                            <option value="6">14</option>
+                                                            <option value="6">15</option>
+                                                            <option value="6">16</option>
+                                                            <option value="6">17</option>
+                                                            <option value="6">18</option>
+                                                            <option value="6">19</option>
+                                                            <option value="6">20</option>
+                                                            <option value="6">21</option>
+                                                            <option value="6">22</option>
+                                                            <option value="6">23</option>
+                                                            <option value="6">24</option>
+                                                            <option value="6">25</option>
+                                                            <option value="6">26</option>
+                                                            <option value="6">27</option>
+                                                            <option value="6">28</option>
+                                                            <option value="6">29</option>
+                                                            <option value="6">30</option>
+                                                            <option value="6">31</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6 select-startdate">
+                                                <div class="productselect">
+                                                    <p>Select Start Date</p>
+                                                    <div class="startdatewrapper">
+                                                        <label for="start-date"><img src="img/admin/calendat-icon.svg" alt="icon"></label>
+                                                        <input class="startdate datepicker" type="text" id="">
+                                                    </div>
+                                                </div>
+                                                
                                             </div>
                                         </div>
                                     </div>
@@ -568,6 +710,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="js/lib/imageuploadify.min.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.14.0/jquery-ui.js"></script>
     <script src="js/common.js"></script>
 </body>
 
