--- a/sitemap.html
+++ b/sitemap.html
@@ -18,6 +18,8 @@
                 
                 <li><h3>Latest updates</h3></li>
                 <li><a target="_blank" href="index.html">Home page</a></li>
+                <li><a target="_blank" href="category-page.html">Category page</a></li>
+
                 <li><a target="_blank" href="product-page.html">Product page</a></li>
                 <li><a target="_blank" href="cart-page.html">Cart page</a></li>
                 <li><a target="_blank" href="my-account-recent-orders.html">My Account - Recent Orders</a></li>
