--- a/index.html
+++ b/index.html
@@ -248,6 +248,53 @@
             </div>
         </section>
 
+        <div class="maincategories">
+            <div class="container">
+                <div class="d-flex flex-wrap ">
+                    <a href="#" class="maincategory">
+                        <div class="imgwrap">
+                            <img src="img/main/maincat1.png" alt="img">
+                        </div>
+                        <p>
+                            Dairy Free Ess Gezunt Products
+                        </p>
+                    </a>
+                    <a href="#" class="maincategory">
+                        <div class="imgwrap">
+                            <img src="img/main/maincat2.png" alt="img">
+                        </div>
+                        <p>
+                            Sugar Free Ess Gezunt Products
+                        </p>
+                    </a>
+                    <a href="#" class="maincategory">
+                        <div class="imgwrap">
+                            <img src="img/main/maincat3.png" alt="img">
+                        </div>
+                        <p>
+                            Gluten Free Ess Gezunt Products
+                        </p>
+                    </a>
+                    <a href="#" class="maincategory">
+                        <div class="imgwrap">
+                            <img src="img/main/maincat4.png" alt="img">
+                        </div>
+                        <p>
+                            Fat-Free Ess Gezunt Products
+                        </p>
+                    </a>
+                    <a href="#" class="maincategory">
+                        <div class="imgwrap">
+                            <img src="img/main/maincat5.png" alt="img">
+                        </div>
+                        <p>
+                            Low in Sodium or Carbs Ess Gezunt Products
+                        </p>
+                    </a>
+                </div>
+            </div>
+        </div>
+
         <section class="productsection">
             <div class="container">
                 <div class="productsection__header">
