--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
                                 <a href="#" class="bordergreenbtn">register as a seller</a>
                                 <a href="#" class="bordergreenbtn">register as a wholesaler</a>
                             </div>
+
+                            <div class="reminder-registration">
+                                <a href="#" class="greenbtn">Sign in</a>
+                                <a href="#">Register</a>
+                                <p>
+                                    to get updates on new items and recipes
+                                </p>
+                            </div>
+
                         </div>
                         <div class="headercartwrap">
                             <div class="header__cart">
@@ -991,6 +1000,27 @@
             </div>
         </div>
     </footer>
+
+
+    <div class="modal fade discountpopup" id="discount" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <p class="header-title">Special offer!</p>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="body-title">
+                        Discount 25% off
+                    </p>
+                    <div class="btnswrapper">
+                        <a href="#" class="getcode">Get the code</a>
+                        <a href="#" data-bs-dismiss="modal" aria-label="Close">No, thanks</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="js/lib/jquery.js"></script>
