--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
         <div class="maincategories">
             <div class="container">
-                <div class="d-flex flex-wrap ">
+                <!-- <div class="d-flex flex-wrap ">
                     <a href="#" class="maincategory">
                         <div class="imgwrap">
                             <img src="img/main/maincat1.png" alt="img">
@@ -300,7 +300,73 @@
                             Low in Sodium or Carbs Ess Gezunt Products
                         </p>
                     </a>
+                </div> -->
+
+                <div class="sliderwrappersect">
+                    <div class="swiper maincategory-slider">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <a href="#" class="maincategory">
+                                    <div class="imgwrap">
+                                        <img src="img/main/maincat1.png" alt="img">
+                                    </div>
+                                    <p>
+                                        Dairy Free Ess Gezunt Products
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#" class="maincategory">
+                                    <div class="imgwrap">
+                                        <img src="img/main/maincat2.png" alt="img">
+                                    </div>
+                                    <p>
+                                        Sugar Free Ess Gezunt Products
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#" class="maincategory">
+                                    <div class="imgwrap">
+                                        <img src="img/main/maincat3.png" alt="img">
+                                    </div>
+                                    <p>
+                                        Gluten Free Ess Gezunt Products
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#" class="maincategory">
+                                    <div class="imgwrap">
+                                        <img src="img/main/maincat4.png" alt="img">
+                                    </div>
+                                    <p>
+                                        Fat-Free Ess Gezunt Products
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#" class="maincategory">
+                                    <div class="imgwrap">
+                                        <img src="img/main/maincat5.png" alt="img">
+                                    </div>
+                                    <p>
+                                        Low in Sodium or Carbs Ess Gezunt Products
+                                    </p>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="swiper-button-next custom"></div>
+                    <div class="swiper-button-prev custom"></div>
                 </div>
+
+
+
+
+
+
             </div>
         </div>
 
@@ -1002,7 +1068,7 @@
     </footer>
 
 
-    <div class="modal fade discountpopup" id="discount" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade discountpopup" id="discount" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -1020,8 +1086,38 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
+    <!-- <div class="modal fade discountpopup2" id="discount2" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <button type="button" class="discclose" data-bs-dismiss="modal" aria-label="Close">
+                    <img src="img/new/red-close.svg" alt="close">
+                </button>
+                <div class="modal-body">
+                    <img src="img/new/discont-img.png" alt="img" class="discontpic">
+                    <p class="body-title">
+                        Get a perfect gift from <br>
+                        the Ess Gesund
+                    </p>
+                    <div class="discont-text">
+                        25%
+                    </div>
+                    <p class="inptitle">discount code</p>
+                    <form action="#">
+                        <input type="email" placeholder="Email">
+                        <div class="btnswrapper">
+                            <button type="submit" class="getcode">Get the code</button>
+                            <a href="#" data-bs-dismiss="modal" aria-label="Close">No, thanks</a>
+                        </div>
+                    </form>
+
+
+                </div>
+            </div>
+        </div>
+    </div> -->
 
     <script src="js/lib/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
