--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
         </div>
     </div> -->
 
-    <!-- <div class="modal fade discountpopup2" id="discount2" tabindex="-1" aria-labelledby="exampleModalLabel"
+    <div class="modal fade discountpopup2" id="discount2" tabindex="-1" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
@@ -1117,7 +1117,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <script src="js/lib/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
