--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 
 
 
-                        <div class="swiper-slide">
+                        <!-- <div class="swiper-slide">
                             <div class="mnslide v1">
                                 <img class="mnslide__bg" src="img/main/mnbg1.png" alt="bg">
                                 <div class="row g-0">
@@ -481,7 +481,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="swiper-slide">
                             <div class="mnslide v2">
                                 <div class="row g-0">
