--- a/index.html
+++ b/index.html
@@ -392,8 +392,8 @@
         <section class="mainslidersect">
             <div class="container">
                 <div class="mainsliderrow">
-                    <div class="timerwrapper">
-                        <img class="timerimg" src="img/main/rafflebox.png" alt="img">
+                    <div class="timerwrapper" style="background-color: #d0d1c9;">
+                        <img class="timerimg" src="img/main/timer-product.png" alt="img">
                         <div class="timerwrapper__content">
                             <p>Chance to win in the</p>
                             <p class="title">raffle!</p>
@@ -608,6 +608,36 @@
                                     </div>
                                     <p>
                                         Low in Sodium or Carbs Ess Gezunt Products
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#" class="maincategory">
+                                    <div class="imgwrap">
+                                        <img src="img/main/maincat6.png" alt="img">
+                                    </div>
+                                    <p>
+                                        Scd approved Ess Gezunt Products
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#" class="maincategory">
+                                    <div class="imgwrap">
+                                        <img src="img/main/maincat7.png" alt="img">
+                                    </div>
+                                    <p>
+                                        Spelt Ess Gezunt Products
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#" class="maincategory">
+                                    <div class="imgwrap">
+                                        <img src="img/main/maincat8.png" alt="img">
+                                    </div>
+                                    <p>
+                                        Supplements Ess Gezunt Products
                                     </p>
                                 </a>
                             </div>
